--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
 	margin: 1em 0;
 }
 
-
 .flex-container {
 	display: flex;
 	flex-wrap: wrap;
@@ -14,6 +13,10 @@
 	.flex-container > * {
 		margin: 1em 1em;
 	}
+}
+
+.books-container {
+	margin-top: 1em;
 }
 
 .book-thumbnail {
@@ -35,13 +38,11 @@
 	opacity: 0.5
 }
 
-
 .title-placeholder {
 	/*background-color: #454545;*/
 	padding: 0.5em;
 	font-size: 1.5em
 }
-
 
 .description {
 	display: none;
@@ -56,7 +57,6 @@
 	line-height: 2.4em;
 	margin-bottom: 1em
 }
-
 
 #modal {
 	  position: fixed; /* Sit on top of the page content */
@@ -75,14 +75,6 @@
 	  padding-bottom: 2em
 }
 
-
-
-/*
-.main-container {
-	padding: 0.2em 0.2em;
-}
-*/
-
 @media only screen and (min-width: 768px) {
 	#modal {
 		padding: 2em 5em;
@@ -99,13 +91,18 @@ body {
 	color: #fff;
 	letter-spacing: 0.1em;
 	line-height: 1.5em;
-	width: 100%;
+	width: auto;
 	padding: 0.2em 0.2em;
 }
 
+@media only screen and (min-width: 768px) {
+	body {
+		padding: 0 2em;
+	}
+}
 
-/* Accordion */
-
+/* List view */
+/* accordion = book title */
 .accordion {
   cursor: pointer;
   padding: 13px;
@@ -116,14 +113,10 @@ body {
   transition: 0.4s;
 }
 
-
 .active, .accordion:hover {
   background-color: #ccc;
   color: #000;
 }
-
-
-
 
 a {
 	color: #34deeb;
@@ -133,20 +126,15 @@ a:visited {
 	color: #dedede;
 }
 
-
 .keyword-container {
 	display: flex;
 }
 
 .keyword {
-	/*background-color: #dedede;
-	border-radius: 30px;*/
 	color: #fff;
 	font-size: 0.8em;
 	margin: 0 1em;
 }
-
-
 
 footer {
 	font-size: 0.7em;
@@ -154,20 +142,12 @@ footer {
 	justify-content: center
 }
 
-
 .navbar {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
 	padding-right: 2em;
-}
-
-@media only screen and (min-width: 768px) {
-	.navbar {
-		padding-right: 2em
-	}
-
 }
 
 .navbar li {
@@ -178,13 +158,6 @@ footer {
 .navbar a {
 	text-decoration: none
 }
-
-
-
-#nav-item-right {
-	margin-right: 2em;
-}
-
 
 p {
 	margin: 0 0 4em 0;
@@ -205,9 +178,7 @@ p {
 	.index-container {
 	font-size: 1.5em;
 	line-height: 2em
-	}
-
-	
+	}	
 }
 
 
@@ -220,15 +191,8 @@ p {
 body {
 	display: flex;
 	flex-direction: column;
+	overflow-x: hidden;
 	min-height: 100vh;
-	max-width: 100%;
-	overflow-x: hidden
-}
-
-@media only screen and (min-width: 768px) {
-	body {
-		padding: 0 2em;
-	}
 }
 
 .main-container {
@@ -242,4 +206,8 @@ body {
 footer {
 	flex-shrink: 0;
 	font-size: 0.8em
+}
+
+.link-container {
+	font-size: 1.5em
 }
